# ml-code-snippets

./: Base_Presentation.pptx  README.md  basic.sh  gcloud-cheat-sheet.md  google-cloud.md  googlecloud_notes.sh
Jupyter/: Jupyter_Notes.ipynb
artifact_registry/: notes.sh
best practices/: checklist.md  logging.py
cloud_run/: trigger.sh
langgraph/: .gitignore  log_manager.py  log_queries.ipynb  main.py  poetry.toml  pyproject.toml  requirements.txt  test_graph.ipynb  test_loganalyser.ipynb  test_main_graph.ipynb  test_nodes.ipynb  utils.py
langgraph/entities/: failure_analysis_report.py
langgraph/graph/: failure_analysis.py  log_analyser.py  log_analyser_1.py  utils.py
langgraph/graph/.ipynb_checkpoints/: graph-checkpoint.py  graph_code_assitant-checkpoint.py  state-checkpoint.py  state_code_assitant-checkpoint.py
langgraph/llm/: google.py  ollama.py
langgraph/llm/.ipynb_checkpoints/: google-checkpoint.py  groq-checkpoint.py
langgraph/nodes/: collect_custom_jobs.py  extract_logs.py  find_log_exception.py  find_log_issues.py  find_solution.py  report_generator.py
langgraph/nodes/.ipynb_checkpoints/: check_log_issues-checkpoint.py  extract_execution_steps-checkpoint.py  verify_kba-checkpoint.py
langgraph/prompts/.ipynb_checkpoints/: log_analysis-checkpoint.py
langgraph/state/: failure_analysis_state.py  log_analyser_state.py  log_analyser_state_1.py
langgraph/tools/: __init__.py  dateutils.py
langgraph/utils/: format_dict.py  gcp_utils.py  print_utils.py  vertex_ai_utils.py
langgraph/utils/.ipynb_checkpoints/: vertex_ai_utils-checkpoint.py
(+31 files in other folders)
